--- a/README
+++ b/README
@@ -1,8 +1,14 @@
 ## 概要
-「SolidityとEthereumによる実践スマートコントラクト開発」（O'REILLY）の写経用のRepositoryです。
+「SolidityとEthereumによる実践スマートコントラクト開発」（O’REILLY）の写経用のRepositoryです。
 https://www.oreilly.co.jp/books/9784873119342/
 
 
 ## ディレクトリ構成
 fundraiser：資金調達アプリケーション
 sampleApp：サンプルアプリケーション
+
+# openzeppelin ライブラリのインストール
+
+```
+yarn add @openzeppelin/contracts
+```
